fix error during build: [vite:css-post] [lightningcss minify] Unknown at rule: @keyframes
6222|  }
6223|
6224|  @keyframes smoothSpin {
   |                       ^
6225|    0% {
6226|      transform: rotate(0deg);

    at minifyCSS (file:///Users/tan/GITHUB/Container-Manager/node_modules/vite/dist/node/chunks/dep-BHkUv4Z8.js:32641:59)
    at async finalizeCss (file:///Users/tan/GITHUB/Container-Manager/node_modules/vite/dist/node/chunks/dep-BHkUv4Z8.js:32504:48)
    at async Promise.all (index 1)
    at async Object.run (file:///Users/tan/GITHUB/Container-Manager/node_modules/vite/dist/node/chunks/dep-BHkUv4Z8.js:3022:22)
    at async Object.renderChunk (file:///Users/tan/GITHUB/Container-Manager/node_modules/vite/dist/node/chunks/dep-BHkUv4Z8.js:32054:18)
    at async transformChunk (file:///Users/tan/GITHUB/Container-Manager/node_modules/rollup/dist/es/shared/node-entry.js:20240:16)
    at async file:///Users/tan/GITHUB/Container-Manager/node_modules/rollup/dist/es/shared/node-entry.js:20314:17
    at async Promise.all (index 3)
    at async transformChunksAndGenerateContentHashes (file:///Users/tan/GITHUB/Container-Manager/node_modules/rollup/dist/es/shared/node-entry.js:20309:5)
    at async renderChunks (file:///Users/tan/GITHUB/Container-Manager/node_modules/rollup/dist/es/shared/node-entry.js:20218:151)

Container-Manager on  apple-ui [!] took 2.6s

--- a/src/components/ContainersList.css
+++ b/src/components/ContainersList.css
@@ -281,42 +281,47 @@
 
 /* Column flex basis for ContainersList */
 .table-header > *:nth-child(1),
-.table-row > *:nth-child(1) { /* Name */
+.table-row > *:nth-child(1) {
+  /* Name */
   flex: 0 0 200px;
   min-width: 150px;
 }
 
 .table-header > *:nth-child(2),
-.table-row > *:nth-child(2) { /* Image */
+.table-row > *:nth-child(2) {
+  /* Image */
   flex: 1 1 250px;
   min-width: 200px;
 }
 
 .table-header > *:nth-child(3),
-.table-row > *:nth-child(3) { /* Status */
+.table-row > *:nth-child(3) {
+  /* Status */
   flex: 0 0 120px;
   min-width: 100px;
 }
 
 .table-header > *:nth-child(4),
-.table-row > *:nth-child(4) { /* Ports */
+.table-row > *:nth-child(4) {
+  /* Ports */
   flex: 0 0 150px;
   min-width: 120px;
 }
 
 .table-header > *:nth-child(5),
-.table-row > *:nth-child(5) { /* Created */
+.table-row > *:nth-child(5) {
+  /* Created */
   flex: 0 0 120px;
   min-width: 100px;
 }
 
 .table-header > *:nth-child(6),
-.table-row > *:nth-child(6) { /* Actions */
+.table-row > *:nth-child(6) {
+  /* Actions */
   flex: 0 0 140px;
   min-width: 140px;
   display: flex;
   justify-content: flex-end;
-}
   font-family: var(--font-family-system);
   min-height: var(--min-row-height);
 }
