--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -22,7 +22,7 @@
   /* Text Colors */
   --text-primary: #000000;
   --text-secondary: #3c3c43;
-  --text-tertiary: #8e8e93;
+  --text-tertiary: #48484a;
 
   /* Border Colors */
   --border-color: #c6c6c8;
